--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,10 +18,10 @@
     "@types/node": "^22.13.11",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "@vritt-os/tsconfig": "workspace:*"
   },
   "dependencies": {
-    "@vritt-os/tsconfig": "workspace:*",
     "chokidar": "^4.0.3",
     "express": "^4.21.2",
     "node-pty": "^1.0.0",
